# percona-server-mongodb

./: .bazelrc  .bazelrc.psmdb  .gitignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  MONGO_TOOLS_TAG_VERSION  OWNERS.yml  README  README.third_party.md  SConstruct  WORKSPACE.bazel  eslint.config.mjs  sbom.json
.github/workflows/: clang-tidy.yml
bazel/: crates.toml  utils.bzl
bazel/config/: BUILD.bazel  configs.bzl
bazel/repository_rules/: cspgo_data.bzl  profiling_data.bzl
bazel/rules_rust/: cargo_build_script_pwd_flags.patch
bazel/wrapper_hook/: BUILD.bazel  autogenerated_targets.py  credential_helper.py  lint.py  lint_test.py  rbe_auth.py  wrapper_hook.py  write_wrapper_hook_bazelrc.py
buildscripts/: generate_result_tasks.py  profile_data_pr.py  setup_multiversion_mongodb.py
buildscripts/idl/: idl_schema.yml
buildscripts/monitor_build_status/: jira_service.py
buildscripts/resmokelib/: configure_resmoke.py  multiversionconstants.py
buildscripts/sbom/: metadata.cdx.json
buildscripts/tests/: test_codeowners_auto_approver.py  test_sync_repo_with_copybara.py
docs/branching/: README.md
docs/inmemory/: README.md
docs/owners/: owners_format.md
etc/: BUILD.bazel  backports_required_for_multiversion_tests.yml
evergreen/: streams_image_build_and_push.sh
jstests/audit/: _audit_helpers.js  audit_log_rotate.js
jstests/auth/: OWNERS.yml  sasl_mechanism_discovery.js
jstests/change_stream_fsm/: test_change_stream_sharding_command_generator.js
jstests/change_streams/: change_stream_currentop_oplog_timestamp.js  queryable_encryption_change_stream.js  server_status_change_streams.js  shard_collection_event.js
jstests/external_auth/: README.md
jstests/ldapauthz/: ldapauthz_user_to_dn_cache_packet_capture.js
jstests/libs/: write_concern_all_commands.js
jstests/noPassthrough/: aggregation_backup_cursor.js  backup_restore_backup_cursor.js  umask.js
jstests/replsets/: all_commands_downgrading_to_upgraded.js  atlas_initialsync_workflows.js  db_reads_while_recovering_all_commands.js  fcbis_backup_cursor_extend.js  replacement_oplog_id_first.js  rollback_writes_oplogs_to_file.js
jstests/sharding/: all_commands_direct_shard_connection_auth.js  database_and_shard_versioning_all_commands.js  database_versioning_all_commands.js  flush_resharding_state_change_errors.js  read_write_concern_defaults_application.js  resharding_collection_cloner.js  resharding_error_during_critical_section.js  safe_secondary_reads_drop_recreate.js  safe_secondary_reads_single_migration_suspend_range_deletion.js  safe_secondary_reads_single_migration_waitForDelete.js
jstests/ssl/: use_internal_authz_for_x509_runtime.js
jstests/watchdog/: wd_auditpath_hang.js
modules_poc/: modules.yaml
percona-packaging/conf/: mongod.conf  mongod.service  percona-server-mongodb-enable-auth.sh  percona-server-mongodb-helper.sh
percona-packaging/debian/: changelog  control  percona-server-mongodb-36-tools.manpages  percona-server-mongodb-mongos.postinst  percona-server-mongodb-mongos.postrm  percona-server-mongodb-mongos.preinst  percona-server-mongodb-server.conffiles  percona-server-mongodb-server.postinst  percona-server-mongodb-server.postrm  percona-server-mongodb-shell.manpages  rules
percona-packaging/docs/: README
src/mongo/db/encryption/: BUILD.bazel
(+601 files in other folders)
